# lex-triage-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  WALKTHROUGH.md  pyproject.toml  smoke_test_hitl.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: escalation.md  task-brief.md
.github/agents/: README.md  critic.md  dataset-curator.md  delivery.md  director.md  eval-engineer.md  implementer.md  legal-advisor.md  qa-tester.md  reviewer.md  triage.md  vision-specialist.md
apps/dataset-generator/: README.md  pyproject.toml
apps/dataset-generator/scripts/: enrich_with_real_images.py
apps/dataset-generator/src/dataset_generator/: chokepoint.py  cli.py  config.py  generator.py  image_downloader.py  image_manifest.py  schemas.py
apps/dataset-generator/tests/: test_chokepoint.py  test_generator.py  test_higgsfield.py
apps/legal-triage/: README.md  pyproject.toml
apps/legal-triage/src/legal_triage/: cli.py  config.py  eval.py  graph.py  hitl_queue.py  llm_factory.py  state.py
apps/legal-triage/src/legal_triage/nodes/: appraisal_creator.py  appraisal_critic.py  classification.py  hitl_gate.py  ingestion.py  router.py  vision.py
apps/legal-triage/tests/: test_eval.py  test_graph.py  test_hitl_queue.py  test_llm_factory.py  test_nodes.py
docs/: data-sources.md  delivery_kpis.md  llm-roster.md  milestones.md
docs/kernel/: README.md  command_grammar.md  director_protocol.md  escalation_matrix.md  review_policy.md  state_model.md  task_contracts.md
docs/projects/legal-email-triage/: README.md  agents.md  (+10 more)
docs/team/: TODO_TRACKER.md  collaboration.md  director_protocol.md  escalation_matrix.md  github_flow.md  review_policy.md  roles.md  task_contracts.md
notebooks/: lex_triage_dashboard.ipynb  lex_triage_interactive.ipynb
runtime/agent_handoffs/: current_mission.md
runtime/benchmarks/: 20260502T060557Z.json  20260502T203213Z.json  20260502T203236Z.json  20260502T204311Z.json  20260502T205107Z.json  latest.json
