[project]
name = "lex-triage-agent"
version = "0.1.0"
description = "Legal Email Triage — LangGraph multimodal agentic system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.uv.workspace]
members = ["apps/dataset-generator", "apps/legal-triage"]

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/dataset-generator/tests", "apps/legal-triage/tests"]
