[project]
name = "dataset-generator"
version = "0.1.0"
description = "Synthetic legal email dataset generator with ground-truth labels"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "faker>=24.0",
]

[project.scripts]
dataset-gen = "dataset_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataset_generator"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
